# dice-roller-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  task-definition.json
.github/: dependabot.yml
.github/workflows/: ecs.yml  rust.yml  terraform_check.yml
locales/: app.yml
localstack/ready.d/: init.sh
roller_discord/: Cargo.toml
roller_discord/src/: main.rs
roller_lang/: Cargo.toml
roller_lang/src/: call_stack.rs  discord.rs  dynamodb.rs  error.rs  eval.rs  lib.rs  repl.rs
roller_lang/src/environments/: hash_map_environment.rs
roller_repl/: Cargo.toml
roller_repl/src/: main.rs
src/: call_stack.rs  discord.rs  dynamodb.rs  environments.rs  eval.rs  executor.rs  expression_types.rs  lib.rs  parser.rs  readline.rs  repl.rs  types.rs
src/environments/: dynamodb_environment.rs  hash_map_environment.rs
terraform/environments/aws-prod/: deployment.tf  dynamo.tf  ecr.tf  ecs.tf  iam.tf  main.tf  oidc.tf  stack  vpc.tf
terraform/environments/localstack/: main.tf
terraform/stack/ddb/: main.tf  outputs.tf
