[package]
name = "dice_roller"
version = "0.1.0"
authors = ["Edward Paget <ed.paget@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-dynamodb = "0.15.0"
nom = "5"
rand = { version = "0.8.5", features = ["std_rng"] }
rustyline = "9.1.2"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.22", features = ["macros", "rt-multi-thread"] }
